syntax = "proto3";

package kvbb.jannis.grpc;

option java_multiple_files = true;
option java_package = "kvbb.jannis.grpc";
option java_outer_classname = "GreeterProto";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}